@@ -120,6 +120,7 @@ remote voip service provider.
 %doc README COPYING NEWS FEATURES SUPPORT TODO NOTES AUTHORS MODULES ChangeLog
 %{_mandir}/man1/sipwitch.1*
 %{_mandir}/man1/sipdigest.1*
+%{_mandir}/man1/sippasswd.1*
 %{_mandir}/man1/siprealm.1*
 %{_mandir}/man1/sipquery.1*
 %{_mandir}/man8/sipw.8*
@@ -129,6 +130,7 @@ remote voip service provider.
 %{_bindir}/sipquery
 %{_bindir}/sipwitch
 %{_bindir}/sipdigest
+%{_bindir}/sippasswd
 %{_bindir}/siprealm
 %dir %{_libdir}/sipwitch
 %config(noreplace) %{_sysconfdir}/logrotate.d/sipwitch
