@@ -10,11 +10,13 @@
 
 MAINTAINERCLEANFILES = Makefile.in Makefile
 AM_CXXFLAGS = -I$(top_srcdir)/inc @SIPWITCH_FLAGS@
-EXTRA_DIST = sipwitch.1 sipdigest.1 sipquery.1 siprealm.1 sipwitch.cgi.8
+EXTRA_DIST = sipwitch.1 sipdigest.1 sipquery.1 siprealm.1 sippasswd.1 \
+	sipwitch.cgi.8
 
-man_MANS = sipwitch.1 sipdigest.1 sipquery.1 siprealm.1 sipwitch.cgi.8
+man_MANS = sipwitch.1 sipdigest.1 sipquery.1 siprealm.1 sippasswd.1 \
+	sipwitch.cgi.8
 
-bin_PROGRAMS = sipquery sipwitch sipdigest siprealm
+bin_PROGRAMS = sipquery sipwitch sipdigest siprealm sippasswd
 sbin_PROGRAMS = sipwitch.cgi
 
 sipwitch_SOURCES = sipwitch.cpp
@@ -25,6 +27,9 @@ sipquery_LDADD = @SIPWITCH_EXOSIP2@ @SIPWITCH_LIBS@
 
 sipdigest_SOURCES = sipdigest.cpp
 sipdigest_LDADD = ../common/libsipwitch.la @SIPWITCH_LIBS@
+
+sippasswd_SOURCES = sippasswd.cpp
+sippasswd_LDADD = ../common/libsipwitch.la @SIPWITCH_LIBS@
 
 siprealm_SOURCES = siprealm.cpp
 siprealm_LDADD = @SIPWITCH_LIBS@
