@@ -1,0 +1,45 @@
+.\" sippasswd - update user's sip digest secret
+.\" Copyright (c) 2010 David Sugar <dyfet@gnutelephony.org>
+.\"
+.\" This manual page is free software; you can redistribute it and/or modify
+.\" it under the terms of the GNU General Public License as published by
+.\" the Free Software Foundation; either version 3 of the License, or
+.\" (at your option) any later version.
+.\"
+.\" This program is distributed in the hope that it will be useful,
+.\" but WITHOUT ANY WARRANTY; without even the implied warranty of
+.\" MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+.\" GNU General Public License for more details.
+.\"
+.\" You should have received a copy of the GNU General Public License
+.\" along with this program; if not, write to the Free Software
+.\" Foundation, Inc.,59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+.\"
+.\" This manual page is written especially for Debian GNU/Linux.
+.\"
+.TH sippasswd "1" "January 2010" "GNU SIP Witch" "GNU Telephony"
+.SH NAME
+sippasswd \- update user's sip digest
+.SH SYNOPSIS
+.B sippasswd
+.I userid
+.br
+.SH DESCRIPTION
+This tool is used to enter and update the sip digest for a specific sipwitch
+user account.  The digest is updated based on the current sip realm.  If the
+sip realm is changed, all digests have to be re-entered.
+.SH "EXIT STATUS"
+Any error in argument format will return an exit status of 3.  The command
+will normally return with exit status of 0 after updating the digest.
+.SH AUTHOR
+.B sippasswd
+was written by David Sugar <dyfet@gnutelephony.org>.
+.SH "REPORTING BUGS"
+Report bugs to sipwitch-devel@gnu.org.
+.SH COPYRIGHT
+Copyright \(co 2010 David Sugar, Tycho Softworks.
+.br
+This is free software; see the source for copying conditions.  There is NO
+warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR
+PURPOSE.
+
