@@ -2,6 +2,7 @@ From version 0.5.13 to ?
 - updated sipdigest to use sipwitch server library.
 - introduction of separate user account digest hash database.
 - digest hash database usable as an authentication source.
+- new sippasswd utility to set user's digest secret.
 
 From version 0.5.12 to 0.5.13
 - introduction of /etc/siprealm to set hash type and realm.
